[gd_scene load_steps=2 format=3 uid="uid://bsn7uavc5pyid"]

[ext_resource type="Script" path="res://Scenes/StartWindow/start_window.gd" id="1_6h5mm"]

[node name="StartWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6h5mm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 144.0
offset_right = 360.0
offset_bottom = 245.0
scale = Vector2(1.5, 1.5)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LoggingIn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Log in"

[node name="ContinueAsGuest" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue as a guest"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="button_up" from="MarginContainer/VBoxContainer/LoggingIn" to="." method="_on_logging_in_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/ContinueAsGuest" to="." method="_on_continue_as_guest_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_button_up"]
